[package]
name = "kount"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
description = "A global input counter built for streaming software"
repository = "https://github.com/mibmo/kount"

[dependencies]
futures = "0.3.16"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.8.2", features = ["macros", "sync", "rt-multi-thread"] }
tracing = { version = "0.1.26", features = ["attributes"] }
tracing-subscriber = { version = "0.2.19", features = ["env-filter", "fmt", "ansi"] }
warp = "0.3.1"
winit = "0.25.0"
